ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: 3.83.38.11 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
  tls:
  - hosts:
    - 3.83.38.11
    secretName: wisecow-tls
